# solvespace-docs

./: CMakeLists.txt  README.md
cmake/: SphinxRST.cmake
docs/: CMakeLists.txt  conf.py.epub.template  conf.py.html.template  index.rst  issues.rst  navigation.rst  reference.rst
docs/constraints/: angle.rst  comment.rst  distance_diameter.rst  equal_length_radius_angle.rst  horizontal_vertical.rst  index.rst  length_ratio.rst  midpoint.rst  orientation.rst  parallel_tangent.rst  perpendicular.rst  point_curve_plane.rst  reference_dimensions.rst  symmetric.rst
docs/entities/: arc.rst  bezier_cubic_spline.rst  circle.rst  index.rst  line.rst  point.rst  rectangle.rst  splitting_trimming.rst  tangent_arc.rst  text.rst  workplane.rst
docs/groups/: extrude.rst  index.rst  linear_array.rst  polar_array.rst  sketch.rst  sketch_in_new_workplane.rst
docs/tutorials/: quick_start.rst
